<resources>
    <string name="app_name">droker_toy</string>
    <string name="action_settings">Settings</string>

    <!--commen-->
    <string name="send">발송</string>
    <string name="resend">재발송</string>
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>
    <string name="verification">인증</string>
    <string name="start">시작하기</string>
    <string name="won">원</string>
    <string name="menu">메뉴</string>
    <string name="cart">담은메뉴</string>

    <!--intro-->
    <string name="intro_affiliate">가맹점</string>
    <string name="intro_login">로그인</string>
    <string name="intro_join">회원가입</string>

    <!--login-->
    <string name="login_title">오더링은 매장을 위해\n열일할 준비가 되었습니다.</string>
    <string name="login_subtitle">열일을 위해서 전화번호 인증을 한번 부탁드릴게요.</string>
    <string name="login_phone_number">휴대폰 번호 입력</string>
    <string name="login_phone_number_desc">입력하신 번호로 인증문자가 발송됩니다.</string>
    <string name="login_phone_number_hint">번호를 입력해 주세요.</string>

    <string name="login_verification_number">인증번호 입력</string>
    <string name="login_verification_number_desc">인증번호가 도착하지 않을 경우 <font color="#FF0000"><u>재발송</u></font> 버튼을 눌러주세요.</string>

    <!--select-->
    <string name="select_title">쉽고 빠른 매장결제,\n재고관리 및 발주\n오더링이 함께합니다.</string>
    <string name="select_subtitle">영업할 매장을 선택(추가)해 주세요.</string>
    <string name="select_add">매장 추가하기</string>

    <!--main-->
    <string name="main_tab_order">주문</string>
    <string name="main_tab_table">테이블</string>
    <string name="main_tab_history">주문내역</string>
    <string name="main_tab_materials">재료관리</string>
    <string name="main_tab_setting">매장관리</string>

    <!--상품-->
    <string name="cart_add_desc">원 담기</string>

    <!--담은상품-->
    <string name="cart_supply_price">공급가액</string>
    <string name="cart_vat">부가세</string>
    <string name="cart_discount_coupon">할인/쿠폰</string>
    <string name="cart_total_price">총액</string>
    <string name="cart_point">포인트</string>
    <string name="cart_price_change">금액변경</string>
    <string name="cart_split_payment">분할결제</string>
    <string name="cart_cash_payment">현금결제</string>
    <string name="cart_etc_payment">기타결제</string>
    <string name="cart_card_payment">카드결제</string>

    <!--테이블주문-->
    <string name="table_order_desc">뭐가 있나요??</string>

    <!--재료관리-->
    <string name="materials_status">재료현황</string>
    <string name="materials_smart_order">스마트오더</string>
    <string name="materials_smart_order_desc">예상 부족 식재료를 추천드립니다. 편하게 원터치 발주 해보세요.</string>
    <string name="materials_consumption">소모량</string>
    <string name="materials_order_status">발주현황</string>
    <!--보유수량/안전수량-->
    <string name="materials_safe_stock">보유수량 / 안전수량</string>
    <!--입고 확인-->
    <string name="materials_stock_in">입고 확인</string>
    <!--발주 리스트-->
    <string name="materials_order_list">발주 리스트</string>

    <!--스마트오더-->
    <string name="materials_delivery_cost">배송비</string>
    <string name="materials_delivery_company">배송업체</string>
    <string name="materials_stock">보유 수량</string>
    <string name="materials_consumption_3days">3일간 예상 소모량</string>
    <string name="materials_order_delete">주문 삭제</string>
    <string name="materials_stock_change">보유수량 변경</string>

    <!--소모량 설정 / 재료별 소모량-->
    <string name="materials_detail_title">&lt;   소모량 설정 / 재료별 소모량</string>
    <string name="materials_detail_desc">재료로 사용하는 메뉴 입니다.</string>
    <string name="materials_detail_consumption">소모량 변경</string>
    <string name="materials_detail_unit">단위 변경</string>

    <string name="consumption_desc">1개 만들기 위해 필요한 재료의 정보가 아래와\n같은지 확인해주세요.\n
앞으로 아주 편한 재료관리 도와드릴게요.</string>
    <!--추천상품 변경-->
    <string name="materials_detail_recommendation">추천상품 변경</string>
    <!--안써요-->
    <string name="materials_detail_not_use">안써요</string>

</resources>